src/assets/styles/styles.scss
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap');
@import './variables/colors';

@font-face {
  font-family: 'Proxima Nova';
  font-weight: normal;
  src: url("../fonts/Proxima\ Nova\ Regular.otf") format("opentype");
}

@font-face {
  font-family: 'Proxima Nova';
  font-weight: bold;
  src: url("../fonts/Proxima\ Nova\ Bold.otf") format("opentype");
}

* {
  font-family: 'Proxima Nova';
  margin: 0;
  color: $circle-black;

  text-decoration: none;

  -ms-overflow-style: none;  /* IE and Edge */
  scrollbar-width: none;  /* Firefox */
}

/* Hide scrollbar for Chrome, Safari and Opera */
::-webkit-scrollbar {
  display: none;
}

html, body {
  width: 100%;
  height: 100vh;
  margin: 0;
  padding: 0;

  background: #ffffff;
  font-size: 16px;
}

body {
  padding: 2rem 6rem;

  @media only screen and (max-width: 800px) {
    padding: 2rem 2rem;
  }
}

#__nuxt, #__layout, #__layout > div {
  height: 100%;
}

h1, h2 {
  font-family: 'Poppins';
}

h2 {
  color: $circle-dark-blue;
}

#root {
  height: 100%;
  width: 100%;
  max-width: 1200px;

  margin: 0 auto;
}

#navbar {
  margin-bottom: 4rem;
}

#content {
  margin-top: 2rem;
}

.card {
  padding: 1.5rem;

  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.15);
  border-radius: 16px;
}

.mono {
  font-family: 'Roboto Mono';
  font-weight: bold;
}

.link {
  color: $circle-black !important;
  text-decoration: none;
  text-transform: uppercase;
  font-weight: bold;
  letter-spacing: 0.03rem;
}

input {
  font-size: 16px;
  outline: none;

  &.search {
    width: 16rem;

    border: none;
    border-bottom: 2px solid $circle-grey;
  }
}

